# safemlx

./: .gitattributes  Cargo.toml  README.md
doc/: model-support.md  provenance.md
examples/safemlx-lm-cli/: Cargo.toml  README.md
examples/safemlx-lm-cli/src/: main.rs
mlx-lm-utils/: README.md
safemlx/: Cargo.toml  README.md  UPSTREAM.md  build.rs
safemlx-codec/: Cargo.toml  README.md
safemlx-codec/examples/: mimi_realtime_bench.rs  personaplex_full_path_bench.rs  personaplex_quantization_eval.rs
safemlx-codec/scripts/: personaplex_pytorch_backend_reference.py  personaplex_quantization_suite.py  test_personaplex_quantization_suite.py
safemlx-codec/src/: lib.rs  mimi.rs
safemlx-gguf/: Cargo.toml  README.md
safemlx-gguf/src/: catalog.rs  convert.rs  error.rs  format.rs  iquant.rs  iquant_tables.rs  lib.rs  reader.rs  writer.rs
safemlx-gguf/tests/: catalog.rs  container.rs  iquant.rs  oracle.rs
safemlx-gguf/tests/fixtures/: README.md  llama-c0bc8591-iq.oracle  mlx-v0.32.0.oracle
safemlx-internal-macros/: Cargo.toml  UPSTREAM.md
safemlx-internal-macros/src/: derive_buildable.rs  derive_builder.rs  generate_builder.rs  generate_macro.rs  lib.rs
safemlx-lm/: CACHE_RESIDENCY.md  Cargo.toml  EXPERT_CACHE_SYNCHRONIZATION.md  README.md
safemlx-lm-utils/: Cargo.toml  README.md
safemlx-lm-utils/src/: error.rs  tokenizer.rs
safemlx-lm/examples/: expert_parallel_benchmark.rs  expert_parallel_generate.rs  gemma4_e4b_probe.rs  gemma4_mtp_probe.rs  gguf_generate.rs  llama_host_offload.rs  llama_residency.rs  moshi_token_parity.rs  paged_prompt_cache.rs  personaplex_step_bench.rs  personaplex_torch_parity.rs  pipeline_generate.rs  quantize_checkpoint.rs  qwen35_moe_bench.rs  tensor_parallel_generate.rs
safemlx-lm/scripts/: deepseek_v3_transformers_fixture.py  moshi_mlx_token_fixture.py  personaplex_torch_fixture.py
safemlx-lm/src/: cache.rs  cache_residency.rs  chat.rs  deepseek_v3.rs  dense_stream.rs  error.rs  expert_cache.rs  expert_parallel.rs  format_dialect.rs  gemma4.rs  gemma4_mtp.rs  gguf_tokenizer.rs  gpt_oss.rs  inkling.rs  inspection.rs  layerwise.rs  lfm2.rs  lib.rs  llama.rs  llama_host_offload.rs  module_binding.rs  moshi.rs  mtp.rs  nemotron_h.rs  offload.rs  parallel.rs  pipeline.rs  quantization.rs  qwen3.rs  qwen3_vl.rs  qwen_hybrid.rs  qwen_mtp.rs  realtime.rs  residency.rs  sampler.rs  streaming.rs  tensor_parallel.rs  test_utils.rs  tool_constraints.rs  weight_recipe.rs  (+2 more)
safemlx-lm/src/generate/: generate_token.rs  mod.rs
safemlx-lm/src/models/: common.rs  deepseek_v3.rs  gemma4.rs  gemma4_assistant.rs  gemma4_audio.rs  gemma4_multimodal.rs  gemma4_vision.rs  gpt_oss.rs  inkling.rs  input.rs  lfm2.rs  llama.rs  mod.rs  moshi.rs  nemotron_h.rs  personaplex.rs  qwen3.rs  qwen3_5_moe.rs  qwen3_next.rs  qwen3_vl.rs  qwen3_vl_moe.rs  qwen_vl.rs
safemlx-lm/src/models/common/: attention.rs  block_fp8.rs  convolution.rs  generation.rs  layers.rs  linear.rs  moe.rs
safemlx-lm/src/processor/: audio.rs  gemma4.rs  image.rs  inkling.rs  mod.rs  qwen.rs  video.rs
safemlx-lm/src/utils/: mod.rs  rope.rs
safemlx-lm/tests/: distributed_expert_exchange_ring.rs  distributed_expert_parallel_ring.rs  distributed_partition_ring.rs  distributed_pipeline_ring.rs  distributed_tensor_parallel_ring.rs
safemlx-macros/: Cargo.toml  UPSTREAM.md
safemlx-macros/src/: lib.rs  module_parameters.rs  quantizable.rs
safemlx-sys/: Cargo.toml  README.md  UPSTREAM.md  build.rs  build_support.rs
safemlx-sys/examples/: is_metal_available.rs
safemlx-sys/src/: bindings.rs  lib.rs
safemlx-sys/src/mlx-c/: CMakeLists.txt
safemlx-sys/src/mlx-c/examples/: CMakeLists.txt
safemlx-sys/src/mlx-c/mlx/c/: array.cpp  half.h  io.h  io_types.cpp  io_types.h  metal.cpp  stream.cpp
safemlx-sys/src/mlx-c/mlx/c/private/: mlx.h
safemlx-sys/src/mlx-c/patches/: apply-idempotent.cmake  mlx-affine-group16.patch  mlx-apple-mobile-platforms.patch  mlx-cuda-global-encoder-lifetime.patch  mlx-gguf-native-k-quants.patch  mlx-gguf-native-q2-q3-k.patch  mlx-gguf-native-q6-k.patch  mlx-gguf-q5-k.patch  mlx-gguf-q6-prefill.patch
safemlx-sys/src/mlx-c/python/: mlxhooks.py
safemlx-tests/: Cargo.toml  UPSTREAM.md
safemlx-tests/tests/: common.rs  test_array_send_concurrency.rs  test_compile_with_state.rs  test_disable_compile.rs  test_exported_macros.rs  test_generate_builder.rs  test_generate_macro.rs  test_module.rs  test_module_parameters.rs  test_optimizers.rs  test_quantizable.rs
safemlx/benches/: native_quantization.rs
safemlx/examples/: capture_gguf_oracle.rs  cuda_smoke.rs  gguf_info.rs  linear_regression.rs  q4k_native_benchmark.rs  q8_0_native_benchmark.rs  tutorial.rs
safemlx/src/: cuda.rs  device.rs  distributed.rs  dtype.rs  error.rs  fast.rs  lib.rs  linalg.rs  losses.rs  memory.rs  metal.rs  native_quantization.rs  nested.rs  quantization.rs  random.rs  stream.rs
safemlx/src/array/: element.rs  mod.rs  safetensors.rs
safemlx/src/fft/: fftn.rs  mod.rs  rfftn.rs  shift.rs
safemlx/src/macros/: array.rs  assert.rs  internal.rs  mod.rs
safemlx/src/module/: mod.rs  module.rs  param.rs
safemlx/src/nn/: activation.rs  container.rs  convolution.rs  convolution_transpose.rs  distributed.rs  dropout.rs  embedding.rs  init.rs  linear.rs  mod.rs  normalization.rs  pooling.rs  positional_encoding.rs  quantized.rs  recurrent.rs  transformer.rs  upsample.rs  value_and_grad.rs
safemlx/src/ops/: arithmetic.rs  compact.rs  conversion.rs  convolution.rs  cumulative.rs  factory.rs  gguf.rs  io.rs  logical.rs  mod.rs  moe.rs  other.rs  quantization.rs  reduction.rs  shapes.rs  sort.rs
safemlx/src/ops/indexing/: index_impl.rs  indexmut_impl.rs  mod.rs
safemlx/src/optimizers/: adadelta.rs  adafactor.rs  adagrad.rs  adam.rs  adamax.rs  adamw.rs  lion.rs  mod.rs  rmsprop.rs  sgd.rs
safemlx/src/transforms/: grad.rs  keyed_value_and_grad.rs  mod.rs  transform_guard.rs  value_and_grad.rs
safemlx/src/transforms/compile/: compile.rs  compile_with_state.rs  mod.rs
safemlx/src/utils/: guard.rs  io.rs  mod.rs  runtime_lock.rs
safemlx/tests/: distributed_ring.rs
(+15 files in other folders)
