[workspace]
members = [
    "safemlx-gguf",
    "safemlx",
    "safemlx-sys",
    "safemlx-macros",
    "safemlx-internal-macros",
    "safemlx-tests",
    "safemlx-lm",
    "safemlx-lm-utils",
    "safemlx-codec",
    "examples/safemlx-lm-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.1"
edition = "2021"
authors = ["Jasper Hugo <jasper@jasperhugo.com>"]
repository = "https://github.com/jbg/safemlx"
keywords = ["mlx", "deep-learning", "machine-learning"]
categories = ["science"]
license = "MIT OR Apache-2.0"
rust-version = "1.88.0"

[workspace.dependencies]
safemlx = { version = "0.1.3", path = "safemlx" }
safemlx-gguf = { version = "0.1.0", path = "safemlx-gguf" }
safemlx-sys = { version = "0.1.3", path = "safemlx-sys", default-features = false }
safemlx-macros = { version = "0.1.1", path = "safemlx-macros" }
safemlx-internal-macros = { version = "0.1.1", path = "safemlx-internal-macros" }
safemlx-lm = { version = "0.4.1", path = "safemlx-lm" }
safemlx-lm-utils = { version = "0.1.4", path = "safemlx-lm-utils", default-features = false }
safemlx-codec = { version = "0.1.0", path = "safemlx-codec" }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokenizers = "0.23"
minijinja = "2"
minijinja-contrib = { version = "2", features = ["pycompat"] }
clap = { version = "4", features = ["derive"] }
idna_adapter = "1"
anyhow = "1"
syn = { version = "2", features = ["full"] }
quote = "1"
darling = "0.23"
proc-macro2 = "1"
itertools = "0.15"
bindgen = "0.72"
cmake = "0.1"
cc = "1"
tempfile = "3"
half = "2"
