[package]
name = "safemlx-internal-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
documentation = "https://github.com/jbg/safemlx"
description = "Internal procedural macros for safemlx"

[lib]
proc-macro = true

[dependencies]
syn.workspace = true
quote.workspace = true
darling.workspace = true
proc-macro2.workspace = true
itertools.workspace = true
