[package]
name = "safemlx-lm-utils"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Utilities for MLX language model runtimes"
readme = "README.md"

[dependencies]
minijinja = { version = "2", features = ["loader"] }
minijinja-contrib = { version = "2", features = ["pycompat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokenizers = { version = "0.22", default-features = false, features = ["fancy-regex"] }
