[package]
name = "safemlx-lm-utils"
version = "0.1.4"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Utilities for MLX language model runtimes"
readme = "README.md"

[package.metadata.docs.rs]
no-default-features = true
features = ["fancy-regex"]

[features]
default = ["onig", "esaxx_fast"]

esaxx_fast = ["tokenizers/esaxx_fast"]
fancy-regex = ["tokenizers/fancy-regex"]
onig = ["tokenizers/onig"]

[dependencies]
minijinja = { version = "2", features = ["loader"] }
minijinja-contrib = { version = "2", features = ["pycompat"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokenizers = { version = "0.23", default-features = false }
