[package]
name = "safemlx-lm"
version = "0.4.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Rust MLX language model runtime"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["aarch64-apple-darwin"]
no-default-features = true
features = ["fancy-regex", "image-processing", "audio-processing"]

[features]
default = ["onig", "esaxx_fast"]

esaxx_fast = ["tokenizers/esaxx_fast", "safemlx-lm-utils/esaxx_fast"]
fancy-regex = ["tokenizers/fancy-regex", "safemlx-lm-utils/fancy-regex"]
onig = ["tokenizers/onig", "safemlx-lm-utils/onig"]
media-processing = []
image-processing = ["media-processing", "dep:image"]
audio-processing = ["media-processing", "dep:rustfft"]

[dependencies]
# Local dependencies
safemlx = { workspace = true, features = ["safetensors"] }
safemlx-lm-utils = { workspace = true, default-features = false }

# External dependencies
serde = { version = "1", features = ["derive"] }
anyhow = "1"
tokenizers = { version = "0.23", default-features = false }
clap = { version = "4", features = ["derive"] }
idna_adapter = "1" 
thiserror = "2"
serde_json = "1"
minijinja = "2"
image = { version = "0.25", default-features = false, optional = true }
rustfft = { version = "6", optional = true }

[dev-dependencies]
lazy_static = "1"
