[package]
name = "safemlx-sys"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

description = "Low-level interface and binding generation for the mlx library"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license = "MIT"
documentation = "https://github.com/jbg/safemlx"
readme = "README.md"

[package.metadata.docs.rs]
targets = [
  "aarch64-apple-darwin",
  "aarch64-apple-ios",
  "aarch64-apple-ios-sim",
]

[features]
default = ["accelerate", "metal"]

accelerate = []
metal = []

[dependencies]

[build-dependencies]
bindgen.workspace = true
cmake.workspace = true
cc.workspace = true
