[package]
name = "safemlx-sys"
version = "0.1.3"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

description = "Low-level interface and binding generation for the mlx library"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license = "MIT"
documentation = "https://github.com/jbg/safemlx"
readme = "README.md"
links = "mlx"

[package.metadata.docs.rs]
targets = [
    "aarch64-apple-darwin",
    "aarch64-apple-ios",
    "aarch64-apple-tvos",
    "aarch64-apple-visionos",
]

[features]
default = ["accelerate", "metal"]

accelerate = []
cuda = []
generate-bindings = ["dep:bindgen"]
metal = []
nccl = ["cuda"]

[dependencies]

[build-dependencies]
bindgen = { workspace = true, optional = true }
cmake.workspace = true
cc.workspace = true
