[package]
name = "safemlx-tests"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]

[dev-dependencies]
safemlx-internal-macros.workspace = true
safemlx = { workspace = true, features = ["safetensors"] }
tempfile.workspace = true
