[package]
name = "safemlx"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true
documentation = "https://github.com/jbg/safemlx"
description = "Unofficial rust wrapper for Apple's mlx machine learning library."
readme = "README.md"

[package.metadata.docs.rs]
targets = [
  "aarch64-apple-darwin",
  "aarch64-apple-ios",
  "aarch64-apple-ios-sim",
]

[dependencies]
safemlx-sys = { workspace = true, default-features = false }
safemlx-internal-macros.workspace = true
safemlx-macros.workspace = true
dyn-clone = "1"
half = "2"
mach-sys = "0.5"
num-complex = "0.4"
num_enum = "0.7"
num-traits = "0.2"
paste = "1"
smallvec = "1"
strum = { version = "0.27", features = ["derive"] }
thiserror.workspace = true
libc = "0.2"
parking_lot = "0.12"
itertools.workspace = true

# optional dependencies
safetensors = { version = "0.6", optional = true }
bytemuck = { version = "1", optional = true, features = ["extern_crate_std"] }
memmap2 = { version = "0.9", optional = true }

[dev-dependencies]
pretty_assertions = "1.4.0"
float_eq = "1"
tempfile = "3"

[features]
default = ["accelerate", "metal"]

accelerate = ["safemlx-sys/accelerate"]
metal = ["safemlx-sys/metal"]

# Enables conversion between `Array` and `safetensors::TensorView`
safetensors = ["dep:safetensors", "dep:bytemuck", "dep:memmap2"]
